# pelpaint

./: .gitignore  BUILD.md  CMakeLists.txt  readme.md
.github/workflows/: desktop_build.yml
resources/: Info.plist
scripts/: dev.sh  dev_simple.sh  generate_xcode_ios.rb
src/: ColorPalettes.hpp  FileChooser.cpp  FileChooser.h  FileUtils.cpp  FileUtils.hpp  IOSFileManager.h  IOSFileManager.mm  ImGuiFileDialog.cpp  ImGuiStyle.hpp  PixelPaintView.cpp  PixelPaintView.hpp  UITheme.hpp  main.cpp  main.mm
src/core/: Canvas.cpp  Canvas.hpp  ImageSurface.cpp  ImageSurface.hpp  Types.hpp  UndoHistory.hpp
src/export/: DepthMapGenerator.hpp  ExportUtils.hpp  ImageExporter.hpp  MeshExporter.cpp  MeshExporter.hpp
src/render/: RenderBackend.hpp
src/tools/: DrawingAlgorithms.cpp  DrawingAlgorithms.hpp
src/ui/: ImGuiStyle.hpp  Widgets.hpp
web/: shell.html
